# PDFOptimizer

./: .gitignore  CHANGELOG.md  LICENSE  PDFOptimizer.spec  README.md  README_CN.md  main.py  pyproject.toml  readme_cn.md  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: release.yml
core/: __init__.py  add_bookmark.py  config_manager.py  config_models.py  converter.py  division.py  merger.py  ocr.py  optimizer.py  pdf2img.py  utils.py  version.py  worker.py
pdfoptimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/: release.py
ui/: config_manager_dialog.py  constants.py  custom_dialog.py  main_window.py  ocr_config_dialog.py  style.qss  widgets.py
ui/tabs/: base_tab.py  bookmark_tab.py  curves_tab.py  merge_tab.py  ocr_tab.py  optimize_tab.py  pdf_to_image_tab.py  split_tab.py
